force-app/main/default/objects/ContactP__c/ContactP__c.object-meta.xml
<CustomObject>
    <label>Course Detail</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>