force-app/main/default/objects/ContactP__c/fields/Course_Language__c.field-meta.xml
<CustomField>
    <fullName>Course_Language__c</fullName>
    <label>Course Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>