force-app/main/default/objects/ContactP__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Devops Engineering</fullName>
            </value>
            <value>
                <fullName>QA Testing</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>CyberSecurity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>