force-app/main/default/objects/ContactP__c/fields/Schedule_Options__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Options__c</fullName>
    <label>Schedule Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>