force-app/main/default/objects/ContactP__c/fields/Student_Amount__c.field-meta.xml
<CustomField>
    <fullName>Student_Amount__c</fullName>
    <label>Student Amount</label>
    <summaryForeignKey>Student__c.Course_Details__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>